cert-manager/myapp-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: myapp
  namespace: default
spec:
  # tls:
  # - secretName: my-app-tls-staging
  #   hosts:
  #     - myapp.peelmicro.com
  rules:
  - host: myapp.peelmicro.com
    http:
      paths:
        - backend:
            serviceName: myapp
            servicePort: 3000
          path: /
